# terraform-aws-analytical-platform-observability

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  main.tf  providers.tf  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  pre-commit-update.yml  super-linter.yml  test.yml  zizmor.yml
tests/: docker-compose-localstack.yml
